[package]
name = "bullseye"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
duration-str = "0.5.0"
rayon = "1.7.0"

[profile.release]
lto = true
codegen-units = 1
